# abac-rs

./: Cargo.toml  Readme.md
abac-core/: Cargo.toml
abac-core/examples/: valid.rs
abac-core/src/: adapter.rs  engine.rs  entity.rs  error.rs  evaluator.rs  lib.rs  rules.rs
abac-core/src/tests/: adapter_test.rs  engine_test.rs  evaluator_test.rs  mod.rs  rules_test.rs
abac_core/: Cargo.toml
abac_core/src/: entity.rs  error.rs  lib.rs  rules.rs
abac_derive/: Cargo.toml
abac_derive/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: evaluate.rs  example.rs
macros/: Cargo.toml
macros/src/: derive.rs  lib.rs  register_entities.rs
src/: error.rs  evaluator.rs  lib.rs  operator.rs  rules.rs
src/tests/: evaluator_test.rs  mod.rs  rules_test.rs
tests/: test.rs
