[package]
name = "abac-rs"
version = "0.1.0"
edition = "2024"
authors = ["WiszeL <handidwic1225@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Minimal and composable ABAC (Attribute-Based Access Control) engine in pure Rust."
repository = "https://github.com/wiszel/abac-rs"
readme = "README.md"
keywords = ["abac", "authorization", "rust", "access-control", "policy"]
categories = ["authentication", "config", "access-control"]
documentation = "https://docs.rs/abac-rs"

[dependencies]
abac_core = { path = "./abac_core" }
abac_derive = { path = "./abac_derive" }

[workspace]
members = ["abac_derive", "abac_core"]
