[package]
name = "abac-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
thiserror = "2.0.12"

macros = { path = "../macros" }

[dev-dependencies]
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
